# upstageailab-cv-classification-cv_5

./: .gitignore  README.md  pyproject.toml  requirements.txt
.obsidian/: workspace.json
codes/: Baseline_Gemini.ipynb  Baseline_augment.ipynb  Baseline_noaugment.ipynb  [Image Classification] 베이스라인 코드 해설.ipynb  augment_exp.ipynb  config.yaml  config_v2.yaml  config_v2_1.yaml  config_v2_2.yaml  config_v3_modelA.yaml  config_v3_modelB.yaml  dataset_offline_augmentation.ipynb  delete_augmented_validation.ipynb  document_17class_balanced02.py  eda.ipynb  gemini_augmentation.py  gemini_augmentation_v2.py  gemini_augmentation_v2_1.py  gemini_augmentation_v2_2.py  gemini_augmentation_v3.py  gemini_evalute.py  gemini_evalute_v2.py  gemini_evalute_v2_1.py  gemini_evalute_v2_2.py  gemini_evalute_v3.py  gemini_inference_v3.py  gemini_main.py  gemini_main_v2.py  gemini_main_v2_1.py  gemini_main_v2_2.py  gemini_main_v3.py  gemini_main_v3_modelB.py  gemini_train.py  gemini_train_v2.py  gemini_train_v2_1.py  gemini_train_v2_2.py  gemini_train_v3.py  gemini_utils.py  gemini_utils_v2.py  gemini_utils_v2_1.py  (+3 more)
codes/ahyeon/: Baseline_augment_with_train_dataset_augmentation.ipynb
codes/practice/: __init__.py
codes/song/: config_resnet50.yaml
data/: init.txt  train.csv  train0705a.csv
data/submissions/: init.txt
docs/: ABBYY Document Images Classification Challenge (Kaggle, 2015) 전략 분석.md  Baseline_Gemini_Guide.md  Dataset EDA.md  DocFormer 기반 문서 이미지 분류.md  OOM_resolve.md  UV.md  timm_model-name_convention.md  using_LayoutLMV2_조사.md  데이터 증강 전략.md  모델 추천.md  이미지 문서 분류 경진대회 전략 추천 (OCR 제외).md  지난 기수 cv 1등 팀 전략.md  현재 문제 정리.md
docs/git-workflow/: team-collaboration-guide.md
logs/: init.txt
models/: init.txt
